[project]
name = "wanderlust-trip-backend"
version = "0.1.0"
description = "FastAPI and Google ADK backend for Wanderlust Trip"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "google-cloud-firestore>=2.16.0",
  "google-cloud-pubsub>=2.23.0",
  "google-cloud-secret-manager>=2.20.0",
  "google-adk>=2.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
